--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "dependencies": {
     "lighthouse": "^9.5.0",
     "rimraf": "^3.0.2"
+  },
+  "devDependencies": {
+    "prettier": "2.6.2"
   }
 }
